--- a/src/view/layout/head-common.html
+++ b/src/view/layout/head-common.html
@@ -1,5 +1,17 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0" >
-<meta charset="UTF-8">
+<meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="keywords" content="ltt,电商">
-<meta name="description" content="ltt电商平台开发教程">
+<meta name="keywords" content="ltt,乐淘淘，乐淘淘电商，网上购物，网上商城，数码产品，手机，笔记本，相机，手表，耳机，电视，食品，服装，玩具，箱包">
+<meta name="description" content="一个提供数码通讯、电器、家居百货、服装服饰、母婴、图书、食品等上万种优质商品，最优质，最便捷的网上购物平台">
+<link rel="dns-prefetch" href="//cdn.bootcss.com">
+<link rel="dns-prefetch" href="//s.happymmall.com">
+<link rel="dns-prefetch" href="//img.happymmall.com">
+<script>
+    var _hmt=_hmt || [];
+    (function () {
+        var hm = document.createElement("script");
+        hm.src="http://hm.baidu.com/hm/js?bc210cd22928076d28296716d9dfcf01";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm,s);
+    })();
+</script>
